name:              episodes
version:           0.1.0
cabal-version:     >= 1.18
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language: Haskell2010
    hs-source-dirs: .
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.API
                     Handler.Calendar
                     Handler.Shows
                     Handler.Users
                     Handler.Stats
                     TVRage
                     Episodes.Auth
                     Episodes.DB
                     Episodes.Format
                     Episodes.Time
                     Episodes.Trace
                     Episodes.YesodPureScript
                     Episodes.YesodPureScriptRoutes


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        RankNTypes
                        DeriveDataTypeable

    build-depends: aeson                         >= 0.6
             , attoparsec
                 , base                          >= 4          && < 5
                 , base64-bytestring             >= 1.0
                 , bytestring                    >= 0.9
                 , conduit                       >= 1.0
                 , containers
                 , directory                     >= 1.1
                 , fast-logger                   >= 2.2
                 , filepath
                 , hjsmin                        >= 0.1
                 , HTTP                          >= 4000.2.18
                 , http-conduit                  >= 2.1
                 , http-types
                 , monad-control                 >= 0.3
                 , monad-logger                  >= 0.3
                 , network
                 , network-uri
                 , old-locale
                 , options
                 , parsec
                 , pbkdf                         >= 1.1
                 , persistent
                 , persistent-postgresql         >= 1.3
                 , persistent-template           >= 1.3
                 , process                       >= 1.1.0.2
                 , purescript                    >= 0.5.4.2
                 , resourcet
                 , scientific
                 , shakespeare                   >= 2.0
                 , template-haskell
                 , time                          >= 1.4
                 , text                          >= 0.11
                 , text-format
                 , transformers
                 , tz
                 , unordered-containers          >= 0.2
                 , utf8-string
                 , wai-extra                     >= 2.1
                 , wai-logger                    >= 2.2
                 , warp                          >= 2.1
                 , xml-conduit
                 , yaml                          >= 0.8
                 , yesod                         >= 1.2.6
                 , yesod-auth-hashdb
                 , yesod-core                    >= 1.2.17
                 , yesod-auth                    >= 1.3
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.3
                 , data-default


executable         episodes
    default-language: Haskell2010
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , episodes
                     , yesod

    ghc-options:       -threaded -O2


executable         tvrage
    default-language: Haskell2010
    if flag(library-only)
        Buildable: False
    main-is:            main.hs
    hs-source-dirs:     ., app-tvrage
    build-depends:      base,
                        bytestring >= 0.10,
                        HTTP,
                        network >= 2.6,
                        network-uri >= 2.6,
                        options,
                        text,
                        xml-conduit >= 1.2,
                        time,
                        old-locale
    ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , episodes
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
