name:              episodes
version:           0.1.0
cabal-version:     >= 1.18
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

Flag build-tvrage-cli
    Default:       False

library
    default-language: Haskell2010
    hs-source-dirs: .
    exposed-modules: Application
                     Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.API
                     Handler.Export
                     Handler.Calendar
                     Handler.Shows
                     Handler.Users
                     Handler.Stats
                     TVRage
                     Episodes.Auth
                     Episodes.DB
                     Episodes.Cache
                     Episodes.Common
                     Episodes.Format
                     Episodes.Time
                     Episodes.Trace
                     Episodes.Update


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        RankNTypes
                        DeriveDataTypeable

    build-depends: aeson                         >= 0.6
                 , attoparsec
                 , async                         >= 2
                 , base                          >= 4 && < 5
                 , base64-bytestring             >= 1.0
                 , blaze-html                    >= 0.8
                 , bytestring                    >= 0.9
                 , cassava                       >= 0.4.2
                 , classy-prelude
                 -- , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit                       >= 1.0
                 , containers                    >= 0.5
                 , data-default
                 , directory                     >= 1.1
                 , fast-logger                   >= 2.2
                 , file-embed
                 , filepath
                 , formatting                    >= 6.1.1
                 , hjsmin                        >= 0.1
                 , HTTP                          >= 4000.2.18
                 , http-conduit                  >= 2.1
                 , http-types
                 , iCalendar                     >= 0.4.0.2
                 , monad-control                 >= 0.3
                 , monad-logger                  >= 0.3
                 , network                       >= 2.6.0.2
                 , network-uri                   >= 2.6.0.1
                 , old-locale
                 , options
                 , parsec
                 , pbkdf                         >= 1.1
                 , persistent                    >= 2.1.1.4
                 , persistent-postgresql         >= 2.1.2.2
                 , persistent-template
                 , process                       >= 1.1.0.2
                 , purescript                    >= 0.6.9.3
                 , resourcet
                 , scientific
                 , shakespeare                   >= 2.0.2.2
                 , template-haskell
                 , time                          >= 1.4 && <1.5
                 , time-locale-compat
                 , text                          >= 0.11
                 , text-format
                 , transformers                  >= 0.4
                 , tz                            >= 0.0.0.9
                 , unbounded-delays
                 , unordered-containers          >= 0.2
                 , uuid
                 , wai-extra                     >= 2.1
                 , wai-logger                    >= 2.2
                 , warp                          >= 3
                 , xml-conduit
                 , yaml                          >= 0.8
                 , yesod                         >= 1.4.1.4
                 , yesod-core                    >= 1.4.9
                 , yesod-auth                    >= 1.4.4
                 , yesod-static                  >= 1.4.0.4
                 , yesod-form                    >= 1.4.4.1
                 , yesod-purescript              >= 0.0.5


                 -- bah
                 , primitive >= 0.5 && <0.6


executable         episodes
    default-language: Haskell2010
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , episodes
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N


executable         tvrage
    default-language: Haskell2010
    if flag(build-tvrage-cli)
        Buildable: True
    else
        Buildable: False
    main-is:            main.hs
    hs-source-dirs:     ., app-tvrage
    build-depends:      base,
                        bytestring >= 0.10,
                        HTTP,
                        network >= 2.6,
                        network-uri >= 2.6,
                        options,
                        text,
                        xml-conduit >= 1.2,
                        time,
                        old-locale
    ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , episodes
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
